# physical-mode-activation

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  main.py  pyproject.toml  review.md
configs/: attention_viz_idefics2.py  attention_viz_internvl3.py  attention_viz_llava.py  attention_viz_llava_next.py  attention_viz_qwen.py  cross_model_idefics2.py  cross_model_idefics2_l26_31.py  cross_model_idefics2_label_free.py  cross_model_idefics2_mpswap_capture.py  cross_model_internvl3.py  cross_model_internvl3_capture.py  cross_model_internvl3_label_free.py  cross_model_llava.py  cross_model_llava_capture.py  cross_model_llava_label_free.py  cross_model_llava_next.py  cross_model_llava_next_label_free.py  encoder_swap_idefics2.py  encoder_swap_idefics2_label_free.py  encoder_swap_idefics2_m8a_capture.py  encoder_swap_idefics2_m8c.py  encoder_swap_idefics2_m8c_label_free.py  encoder_swap_idefics2_m8d.py  encoder_swap_idefics2_m8d_label_free.py  encoder_swap_internvl3.py  encoder_swap_internvl3_label_free.py  encoder_swap_internvl3_m8a_capture.py  encoder_swap_internvl3_m8c.py  encoder_swap_internvl3_m8c_label_free.py  encoder_swap_internvl3_m8d.py  encoder_swap_internvl3_m8d_label_free.py  encoder_swap_llava_next.py  encoder_swap_llava_next_label_free.py  encoder_swap_llava_next_m8a_capture.py  encoder_swap_llava_next_m8c.py  encoder_swap_llava_next_m8c_label_free.py  encoder_swap_llava_next_m8d.py  encoder_swap_llava_next_m8d_label_free.py  fc_label_free_llava.py  fc_label_free_qwen.py  (+36 more)
docs/: 00_architecture.md  01_stimulus_spec.md  02_scoring_rubric.md  03_run_log.md  (+16 more)
(+298 files in other folders)
